remove discord link from info box

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             Ctrl+Left-click to remove them<br><br>
             </div>
             For questions, support, or feedback, visit us on Discord!<br>
-            <a href="https://discord.gg/rWpsquDXqA" target="_blank"><img src='assets\discord.png' style="width: 60px; height: 60px;"
+            <a href=#><img src='assets\discord.png' style="width: 60px; height: 60px;"
                     alt="Discord Icon"></a>
         </div>
         
