url fix for icon

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img src="assets/marker.png" alt="Resources Icon">Resources</button>
 
         <button class="clear-all-button" onclick="closeSidebar()">
-        <img src="mapping/static/assets/clearall.png">Clear All</button>
+        <img src="assets/clearall.png">Clear All</button>
 
         <button id="info-button" class="info-button">
             <img src="assets/info.png" alt="Info Icon">Info</button>
