--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <link href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" rel="stylesheet">
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-<script src="map.js"></script>
+<script src="js/map.js"></script>
 <html lang="en">
 
 <head>
     <base target="_top">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 
     <title>Pax Dei Maps</title>
     <link rel="icon" href="assets/favicon.ico" type="image/png">
