Fixed a few merge errors * Fixed class of "Clear Resources" in index.html * Remove close button logic for the sidebar from map.js * Added rebuild script for bash

--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -39,7 +39,7 @@
         <button id="resources-button" onclick="toggleAndCloseSidebar()">
             <img src="assets/marker.png" alt="Resources Icon">Resources</button>
 
-        <button class="clear-all-button" onclick="closeSidebar()">
+        <button class="clear-resources-button" onclick="closeSidebar()">
             <img src="assets/clearall.png">Clear Resources </button>
 
         <button id="info-button" class="info-button">
